# CloudPilot

./: .gitignore
agent-runtime/: .env.example  .gitignore  pyproject.toml  setup.ps1
agent-runtime/src/cloudpilot/: __init__.py
agent-runtime/src/cloudpilot/agents/: __init__.py
agent-runtime/src/cloudpilot/config/: __init__.py  env.py  llm.py
agent-runtime/src/cloudpilot/knowledge/: __init__.py  config.py  embeddings.py  models.py  query_service.py  sync_service.py  text_utils.py
agent-runtime/src/cloudpilot/scanner/: __init__.py  context.py  detector_runner.py  knowledge.py  models.py  registry.py  scan_session.py  scanner.py
agent-runtime/src/cloudpilot/scripts/: __init__.py  run_architecture.py  run_deployment.py  run_documentation_query.py  run_platform_selection.py  run_repository_analysis.py  scan_repository.py  sync_knowledge_base.py  verify_connection.py
agent-runtime/tests/: conftest.py  test_schema_stability.py
agent-runtime/tests/agents/architecture/: test_agent_smoke.py  test_component_analyzer.py  test_models.py
agent-runtime/tests/agents/deployment/: __init__.py  (+3 more)
agent-runtime/tests/knowledge/: test_chroma_store.py  test_markdown_chunker.py  test_sync_service.py  test_text_utils.py
agent-runtime/tests/scanner/: test_architecture.py  test_cicd.py  test_commands.py  test_context.py  test_database.py  test_dependencies.py  test_deployment.py  test_detector_runner.py  test_environment.py  test_frameworks.py  test_health.py  test_manifests.py  test_package_manager.py  test_repository_info.py  test_runtime.py  test_scanner_integration.py
(+451 files in other folders)
