[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cloudpilot-agent-runtime"
version = "0.1.0"
description = "CloudPilot Google ADK agent runtime"
requires-python = ">=3.10"
dependencies = [
  "google-adk>=2.3.0,<3",
  "litellm>=1.83.7,<=1.83.14",
  "python-dotenv>=1.0,<2",
  "httpx>=0.27,<1",
  "chromadb>=0.5,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
cloudpilot-verify-ai = "cloudpilot.scripts.verify_connection:main"
cloudpilot-scan = "cloudpilot.scripts.scan_repository:main"
cloudpilot-analyze-repo = "cloudpilot.scripts.run_repository_analysis:main"
cloudpilot-sync-knowledge = "cloudpilot.scripts.sync_knowledge_base:main"
cloudpilot-query-docs = "cloudpilot.scripts.run_documentation_query:main"
cloudpilot-platform-select = "cloudpilot.scripts.run_platform_selection:main"
cloudpilot-architecture = "cloudpilot.scripts.run_architecture:main"
cloudpilot-deploy = "cloudpilot.scripts.run_deployment:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cloudpilot"]

[tool.hatch.build.targets.sdist]
only-include = ["src/cloudpilot", "pyproject.toml"]
